# rt-one-weekend-rust

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  win.sh
.helix/: languages.toml
benches/: render.rs
src/: camera.rs  colour.rs  grid.rs  hittable.rs  lib.rs  main.rs  obj.rs  ray.rs  rays.rs  renderer.rs  sphere.rs  state.rs  triangle.wgsl  util.rs  vec3.rs
src/hittable/: mod.rs  triangle.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
